helloworld1.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: demoApp #需與Pod的Labels一樣，才能連結
  type: LoadBalancer #設定才能在AKS中建立一個公用IP
  ports:
    - targetPort: 8080 #Pod裡的服務運行的port
      name: port8080
      port: 88 #外部連線的port，公用IP:port
